# shopworld.dev

./: .gitignore  Makefile  README.md  index.html  milli_hero_page_v2.html  package-lock.json  package.json  vite.config.js.timestamp-1781807341329-fbe93308f9edf.mjs
commerce_rle/: README.md  explainer.md  pyproject.toml  requirements.txt
commerce_rle/commerce_rle/agents/: oracle.py
commerce_rle/commerce_rle/api/: amazon.py
commerce_rle/commerce_rle/tasks/: generators.py  task.py
commerce_rle/scripts/: benchmark.py  demo.py
commerce_rle/tests/: test_env.py
shopper_sim/: LICENSE  README.md  explainer.md  graph_run.json  pyproject.toml  run_tests.sh
shopper_sim/docs/: ARCHITECTURE.md  DETERMINISM.md  MULTISTEP.md
shopper_sim/examples/: generation_diff.py  grade_real_agent.py  graph_and_replay.py  run_full_battery.py  show_multistep_dialogue.py
shopper_sim/shopper_sim/: __init__.py  cli.py
shopper_sim/shopper_sim/adapters/: agent_adapter.py  base.py  dialogue_policy.py  mock_merchant.py  turn_classifier.py  web_adapter.py
shopper_sim/shopper_sim/engine/: hashing.py  rng.py  types.py
shopper_sim/shopper_sim/nlg/: lexicon.py  paraphrase_bank.py  realizer.py
shopper_sim/shopper_sim/oracle/: rubric.py  scorer.py
shopper_sim/shopper_sim/orchestrator/: runner.py
shopper_sim/shopper_sim/persona/: behavior.py  library.py
shopper_sim/shopper_sim/reporting/: scorecard.py
shopper_sim/shopper_sim/taxonomy/: falkor_store.py  graph.py  registry.py  scenario_compiler.py
shopper_sim/tests/: conftest.py  test_coverage.py  test_determinism.py  test_determinism_guard.py  test_dialogue_policy.py  test_falkor_store.py  test_gap_fixes.py  test_nlg_behavior.py  test_rng.py  test_scenario_compiler.py  test_scoring.py  test_turn_classifier.py
shopworld-platform/: .gitignore  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
shopworld-platform/data/simulator/: commerce_store.json  manifest.json
shopworld-platform/examples/: example1.md
shopworld-platform/experiments/: compare_agents.py  run_benchmark.py
shopworld-platform/experiments/configs/: mvp_30.yaml  mvp_real_llm.yaml
shopworld-platform/experiments/reports/: comparative_report.md  results.json
shopworld-platform/src/llm_agent/: __init__.py  agent.py  client.py  react_loop.py
shopworld-platform/src/llm_agent/prompts/: merchant_system.md  policy_context.md
shopworld-platform/src/milli_run/: __init__.py  agent.py  audit.py  templates.py  workflows.py
shopworld-platform/src/milli_run/nlu/: __init__.py  confidence.py  corpus.py  entity_extractor.py  svm_model.py  training_data.py
shopworld-platform/src/milli_run/transactions/: __init__.py  guards.py  planner.py
shopworld-platform/src/shopworld/: __init__.py  cli.py  environment.py  evaluator.py  reward.py  task.py
shopworld-platform/src/shopworld/agents/: __init__.py  base.py
shopworld-platform/src/shopworld/api_surface/: __init__.py  merchant.py
shopworld-platform/src/shopworld/apps/: __init__.py
shopworld-platform/src/shopworld/backend/: README.md  __init__.py  db.py
shopworld-platform/src/shopworld/bench/: __init__.py  compare.py  runner.py
shopworld-platform/src/shopworld/common/: __init__.py  datetime.py  errors.py  serialization.py
shopworld-platform/src/shopworld/examples/: __init__.py  agent_comparison.py  hello_world.py
shopworld-platform/src/shopworld/generate/: __init__.py  stores.py
shopworld-platform/src/shopworld/scenarios/: __init__.py  bitext_retail_importer.py  bitext_support_importer.py  splits.py  synthetic.py
shopworld-platform/src/shopworld/tasks/: __init__.py  address_change.py  cancellation.py  escalation.py  refund.py  wismo.py  (+2 more)
shopworld-platform/tests/: __init__.py  test_behavioral.py  test_bench_runner.py  test_compare_report.py  test_environment.py  test_escalation.py  test_generate_stores.py  test_graphql_api.py  test_llm_agent.py  test_merchant_api_surface.py  test_milli_run.py  test_models.py  test_replay.py  test_scenario_tasks.py  test_scenarios_bitext.py
vending-bench-2-ollama-repro/: README.md  SOURCE_NOTES.md  pyproject.toml
vending-bench-2-ollama-repro/benchmarks/: official_vb2_leaderboard_snapshot_2026-06-29.json
vending-bench-2-ollama-repro/configs/: vb2_local.json
vending-bench-2-ollama-repro/results/baseline/: scripted_baseline_seed42_20260629T103749.jsonl  scripted_baseline_seed42_20260629T103749.summary.json
vending-bench-2-ollama-repro/results/smoke/: gemma4_12b-mlx_seed42_20260629T103820.jsonl  gemma4_12b-mlx_seed42_20260629T103820.summary.json
vending-bench-2-ollama-repro/scripts/: run_5x_full.sh  run_smoke.sh
vending-bench-2-ollama-repro/src/vb2_local/: __init__.py  agent.py  cli.py  runner.py  sim.py
vending-bench-2-ollama-repro/tests/: test_sim.py
(+81 files in other folders)
