[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "commerce-rle"
version = "0.1.0"
description = "A bounded Amazon-commerce reinforcement learning environment with state-diff evaluation."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["commerce_rle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
