[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shopworld"
version = "0.1.0"
description = "A deterministic reinforcement learning environment for Shopify merchant AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlmodel>=0.0.14",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "strawberry-graphql>=0.217.0",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "python-dateutil>=2.8.2",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
shopworld = "shopworld.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shopworld"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
# The codebase uses dynamic SQLModel/SQLAlchemy expressions and gradually typed modules.
# Keep mypy in CI while suppressing noisy checks until those areas are fully annotated.
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "dict-item",
    "func-returns-value",
    "import-untyped",
    "no-any-return",
    "operator",
    "union-attr",
    "var-annotated",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.pip]
python-version = "3.10"
generate-hashes = true
